# rust_db_app

./: Cargo.toml  README.md
sql/: create_tables.sql  functions.sql  indexes.sql  insertions.sql  requests.sql  trigger
src/: main.rs
