[package]
name = "my_project"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.10", features = ["tokio"] }
tokio = { version = "1.0", features = ["full"] }
tokio-postgres = "0.7"
serde = { version = "1.0", features = ["derive"] }
chrono = "0.4"
dirs = "4.0"
time = "0.3"
postgres-types = "0.2"